<resources>
    <string name="app_name">GradeUP</string>
    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_update_profile">Update Profile</string>
    <string name="Email">E-mail Address</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Retrieve">Retrieve</string>
    <string name="Register">"Register"</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="title_activity_register">Register</string>
    <string name="FieldOfStudy">"Field of Study"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_create_group">New Group</string>
    <string name="university">University</string>
    <string name="logout">Logout</string>
    <string name="title_activity_update_profile">Update Profile</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_update_profile_picture">Update Profile Picture</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_schedule">Add Schedule</string>
    <string name="title_activity_group_home">Group Home</string>
    <string name="title_activity_search_group">Search Study Group</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_temp">temp</string>
<<<<<<< HEAD
    <string name="title_activity_approve_request">Approve Requests</string>
<string name="title_activity_view_schedule">View Schedule</string>
    <string name="title_forgot_pass_activity">Retrieve Password</string>
=======
    <string name="title_activity_view_schedule">View Schedule</string>
    <string name="title_activity_update_schedule">Update Schedule</string>
    <string name="title_activity_approve_request">Approve Request</string>
    <string name="title_activity_update_user_schedule">Update Schedule</string>
    <string name="getTime"><u>Get Available Times...</u>.</string>
    <string name="title_activity_create_group_meeting">New Meeting</string>
    <string name="title_forgot_pass_activity">Retrieve Password</string>
    <string name="action_public_discussion">Public Discussion Forum</string>


>>>>>>> origin/master
</resources>
