<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ufl.gradeup.UserProfileActivity">
    <item
        android:id="@+id/updateProfile"
        android:orderInCategory="100"
        android:title="@string/action_update_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/logOut"
        android:icon="@mipmap/logout_icon1"
        android:title="@string/logout"
        android:orderInCategory="400"
        app:showAsAction="never"/>
    <item
        android:id="@+id/updateProfilePicture"
        android:orderInCategory="300"
        android:title="@string/action_update_profile_picture"
        app:showAsAction="never" />
    <item
        android:id="@+id/searchForGroups"
        android:orderInCategory="200"
        android:title="@string/title_activity_search_group"
        app:showAsAction="never" />
    <item
        android:id="@+id/creategroupMenuItem"
        android:icon="@mipmap/creategroup_white"
        android:title="@string/title_activity_create_group"
        android:orderInCategory="200"
        app:showAsAction="always"/>
</menu>
