<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.ufl.gradeup.RegisterActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"></include>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameTxt"
        android:layout_below="@+id/app_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="Name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/emailTxt"
        android:hint="@string/Email"
        android:layout_below="@+id/nameTxt"
        android:layout_alignLeft="@+id/nameTxt"
        android:layout_alignStart="@+id/nameTxt"
        android:layout_alignRight="@+id/nameTxt"
        android:layout_alignEnd="@+id/nameTxt" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordTxt"
        android:hint="@string/Password"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/emailTxt"
        android:layout_alignLeft="@+id/emailTxt"
        android:layout_alignStart="@+id/emailTxt"
        android:layout_alignRight="@+id/emailTxt"
        android:layout_alignEnd="@+id/emailTxt" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirmPasswordTxt"
        android:hint="@string/ConfirmPassword"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/passwordTxt"
        android:layout_alignStart="@+id/passwordTxt"
        android:layout_alignRight="@+id/passwordTxt"
        android:layout_alignEnd="@+id/passwordTxt" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/studyFieldTxt"
        android:layout_marginTop="20dp"
        android:hint="@string/FieldOfStudy"
        android:layout_below="@+id/confirmPasswordTxt"
        android:layout_alignRight="@+id/confirmPasswordTxt"
        android:layout_alignEnd="@+id/confirmPasswordTxt"
        android:layout_alignLeft="@+id/confirmPasswordTxt"
        android:layout_alignStart="@+id/confirmPasswordTxt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:id="@+id/registerBtn"
        android:textColor="@color/buttonText"
        android:layout_below="@+id/studyFieldTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

</RelativeLayout>
