<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ufl.gradeup.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@mipmap/gradeup_logo" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:drawableLeft="@mipmap/emailid_icon"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/emailText"
        android:layout_alignLeft="@+id/emailText"
        android:layout_alignRight="@+id/emailText"
        android:layout_alignStart="@+id/emailText"
        android:layout_below="@+id/emailText"
        android:layout_marginTop="20dp"
        android:drawableLeft="@mipmap/password_icon"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/Login"
        android:textColor="@color/buttonText" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LoginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="Don't have an account? Sign UP" />
</RelativeLayout>
